--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,14 @@
 name = "Heom"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang <y.t.d.huang@phys.ncku.edu.tw>"]
-version = "1.0.1"
+version = "1.0.2"
 
 [deps]
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
