make some attribute to be constant in ADOs and heom matrices

--- a/Project.toml
+++ b/Project.toml
@@ -17,3 +17,6 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
+
+[compat]
+julia = "1.8"
