--- a/Project.toml
+++ b/Project.toml
@@ -4,18 +4,19 @@ authors = ["Yi-Te Huang <y.t.d.huang@phys.ncku.edu.tw>"]
 version = "1.0.2"
 
 [deps]
-Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
-DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
-Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
+[compat]
+julia = "1.8"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
-
-[compat]
-julia = "1.8"
