--- a/Project.toml
+++ b/Project.toml
@@ -26,3 +26,7 @@ julia = "1.8"
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
