--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -1,5 +1,7 @@
 name: Runtests
+
 on: [push, pull_request]
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -15,3 +17,7 @@ jobs:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
+      - uses: julia-actions/julia-processcoverage@latest
+      - uses: codecov/codecov-action@latest
+        with:
+          file: lcov.info
