--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
       - uses: julia-actions/julia-processcoverage@latest
-      - uses: codecov/codecov-action@latest
+      - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
