--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
 
 [compat]
 JLD2 = ">= 0.4.23"
+LinearSolve = ">= 1.28"
 julia = "1.8"
 
 [extras]
