--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ LinearSolve = "1.42.0"
 OrdinaryDiffEq = "6.52.0"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
+Reexport = "1"
 SteadyStateDiffEq = "1.15.0"
 julia = "1.8"
 
