change package name Heom to HEOM

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Heom"
+name = "HEOM"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang <y.t.d.huang@phys.ncku.edu.tw>"]
 version = "0.1.0"
