CompatHelper: bump compat for LinearSolve to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
 Crayons = "4.1"
 FastExpm = "1.1.0"
 JLD2 = "0.4.31"
-LinearSolve = "1.42.0"
+LinearSolve = "1.42.0, 2"
 OrdinaryDiffEq = "6.52.0"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
