--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+SciMLOperators = "c0aeaf25-5076-4817-a8d5-81caf7dfa961"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
 
@@ -26,6 +27,7 @@ OrdinaryDiffEq = "6.53.3"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
 Reexport = "1"
+SciMLOperators = "0.3.3"
 SteadyStateDiffEq = "1.15.0"
 julia = "1.8"
 
