--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main # update to match your development branch (master, main, dev, trunk, ...)
+      - develop
     tags: '*'
   pull_request:
+      - develop
 
 jobs:
   build:
