--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - 'main' # update to match your development branch (master, main, dev, trunk, ...)
-      - 'develop'
     tags: 
       - '*'
   pull_request:
     branches:
+      - 'main'
       - 'develop'
 
 jobs:
