--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,6 +5,7 @@ HierarchicalEOM = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
