--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -18,6 +18,7 @@ HierarchicalEOM = "0"
 LaTeXStrings = "1"
 LinearSolve = "2.5"
 Literate = "2"
+MKL_jll = "2022"
 OrdinaryDiffEq = "6.53"
 Pardiso = "0.5"
 Plots = "1"
