fix runtests CI

--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -15,18 +15,27 @@ jobs:
       matrix:
         group:
           - Core
-        version:
+        julia-version:
           - '1'
           - '1.8'
         include:
-          - version: '1'
+          - julia-version: '1'
             group: 'HierarchicalEOM_QOExt'
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
-      - uses: julia-actions/cache@v1
+      - uses: actions/cache@v3
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
