--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -21,6 +21,8 @@ jobs:
         include:
           - julia-version: '1'
             group: 'HierarchicalEOM_QOExt'
+          - julia-version: '1'
+            group: 'HierarchicalEOM_CUDAExt'
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v1
