--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -10,14 +10,22 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    name: Julia ${{ matrix.julia-version }} - ${{ matrix.os }} - ${{ matrix.arch }} ( ${{ matrix.group }} )
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        group:
-          - Core
         julia-version:
           - '1'
           - '1.8'
+        os:
+          - ubuntu-latest
+          - macOS-latest
+          - windows-latest
+        arch:
+          - x64
+        group:
+          - Core
         include:
           - julia-version: '1'
             group: 'HierarchicalEOM_QOExt'
@@ -26,7 +34,17 @@ jobs:
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
-      - uses: julia-actions/cache@v1
+          arch: ${{ matrix.arch }}
+      - uses: actions/cache@v3
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
@@ -37,4 +55,3 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           file: lcov.info
-          token: ${{ secrets.CODECOV_TOKEN }}
