--- a/Project.toml
+++ b/Project.toml
@@ -30,12 +30,15 @@ HierarchicalEOM_QOExt = "QuantumOptics"
 Crayons = "4.1"
 FastExpm = "1.1.0"
 JLD2 = "0.4.31"
+LinearAlgebra = "1.8"
 LinearSolve = "2.4.2"
 OrdinaryDiffEq = "6.53.4"
+Pkg = "1.8"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
 Reexport = "1"
 SciMLOperators = "0.3.5"
+SparseArrays = "1.8"
 SteadyStateDiffEq = "1.16.0"
 julia = "1.8"
 
