[fixCI] set conditions for PR draft

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,6 +18,8 @@ steps:
     timeout_in_minutes: 60
     if: | 
         // Don't run Buildkite if the commit message includes the text [skip tests]
+        // Don't run Buildkite for PR draft
         // Only run Buildkite when new commits and PR are made to main branch
         build.message !~ /\[skip tests\]/ &&
+        !build.pull_request.draft         &&
         (build.branch =~ /main/ || build.pull_request.base_branch =~ /main/)
