--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ ProgressMeter = "1.7"
 Reexport = "1"
 SciMLOperators = "0.3.5"
 SparseArrays = "1.8"
-SteadyStateDiffEq = "1.16.0"
+SteadyStateDiffEq = "1.16.0, 2"
 julia = "1.8"
 
 [extras]
