--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "1.2.0"
 
 [deps]
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
+DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 FastExpm = "7868e603-8603-432e-a1a1-694bd70b01f2"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -28,6 +29,7 @@ HierarchicalEOM_QOExt = "QuantumOptics"
 
 [compat]
 Crayons = "4.1"
+DiffEqBase = "6.140"
 FastExpm = "1.1.0"
 JLD2 = "0.4.31"
 LinearAlgebra = "1.8"
@@ -39,7 +41,7 @@ ProgressMeter = "1.7"
 Reexport = "1"
 SciMLOperators = "0.3.5"
 SparseArrays = "1.8"
-SteadyStateDiffEq = "1.16.0, 2"
+SteadyStateDiffEq = "2.0"
 julia = "1.8"
 
 [extras]
