--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ ProgressMeter = "1.7"
 Reexport = "1"
 SciMLOperators = "0.3.5"
 SparseArrays = "1.8"
-SteadyStateDiffEq = "2.0"
+SteadyStateDiffEq = "1.16, 2.0"
 julia = "1.8"
 
 [extras]
