--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "HierarchicalEOM"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang <y.t.d.huang@phys.ncku.edu.tw>"]
-version = "1.2.0"
+version = "1.2.1"
 
 [deps]
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
@@ -29,20 +29,20 @@ HierarchicalEOM_QOExt = "QuantumOptics"
 
 [compat]
 Crayons = "4.1"
-DiffEqBase = "6.136"
+DiffEqBase = "6.140"
 FastExpm = "1.1.0"
 JLD2 = "0.4.31"
-LinearAlgebra = "1.8"
+LinearAlgebra = "1.9"
 LinearSolve = "2.4.2"
 OrdinaryDiffEq = "6.53.4"
-Pkg = "1.8"
+Pkg = "1.9"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
 Reexport = "1"
 SciMLOperators = "0.3.5"
-SparseArrays = "1.8"
-SteadyStateDiffEq = "1.16, 2.0"
-julia = "1.8"
+SparseArrays = "1.9"
+SteadyStateDiffEq = "2.0"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
