--- a/Project.toml
+++ b/Project.toml
@@ -22,10 +22,12 @@ SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
 [weakdeps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
+QuPhys = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
 
 [extensions]
 HierarchicalEOM_CUDAExt = "CUDA"
 HierarchicalEOM_QOExt = "QuantumOptics"
+HierarchicalEOM_QuPhysExt = "QuPhys"
 
 [compat]
 Crayons = "4.1"
