--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -9,6 +9,7 @@ OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
+QuantumToolbox = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
 
 [compat]
 BenchmarkTools = "1.3"
@@ -21,3 +22,4 @@ OrdinaryDiffEq = "6.53"
 Pardiso = "0.5"
 Plots = "1"
 QuantumOptics = "1"
+QuantumToolbox = "0"
