--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -67,6 +67,8 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
         with:
           directories: src,ext
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
-          file: lcov.info
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
