--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ Pkg = "1.9"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
 Reexport = "1"
+SafeTestsets = "0.1"
 SciMLOperators = "0.3.5"
 SparseArrays = "1.9"
 SteadyStateDiffEq = "2.0"
@@ -48,6 +49,7 @@ julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
