--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -4,9 +4,15 @@ on:
   push:
     branches:
       - 'main'
+    paths-ignore:
+      - 'docs/**'
+      - 'examples/**'
   pull_request:
     branches:
       - 'main'
+    paths-ignore:
+      - 'docs/**'
+      - 'examples/**'
     types:
       - opened
       - reopened
@@ -63,6 +69,6 @@ jobs:
           directories: src,ext
       - uses: codecov/codecov-action@v4
         with:
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
