CompatHelper: bump compat for QuantumToolbox to 0.7 for package docs, (keep existing compat)

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -22,4 +22,4 @@ OrdinaryDiffEq = "6.53"
 Pardiso = "0.5"
 Plots = "1"
 QuantumOptics = "1"
-QuantumToolbox = "0.5.4"
+QuantumToolbox = "0.5.4, 0.7"
