--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,7 @@ version = "1.4.1"
 
 [deps]
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
-DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
+DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 FastExpm = "7868e603-8603-432e-a1a1-694bd70b01f2"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -17,7 +17,6 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLOperators = "c0aeaf25-5076-4817-a8d5-81caf7dfa961"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
 
 [weakdeps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -31,19 +30,19 @@ HierarchicalEOM_QuantumToolboxExt = "QuantumToolbox"
 
 [compat]
 Crayons = "4.1"
-DiffEqBase = "6.140"
+DiffEqCallbacks = "2, 3"
 FastExpm = "1.1.0"
 JLD2 = "0.4.31"
-LinearAlgebra = "1.9"
+LinearAlgebra = "<0.0.1, 1"
 LinearSolve = "2.4.2"
 OrdinaryDiffEq = "6.53.4"
-Pkg = "1.9"
+Pkg = "<0.0.1, 1"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
 Reexport = "1"
 SciMLOperators = "0.3.5"
-SparseArrays = "1.9"
-SteadyStateDiffEq = "2.0"
+SparseArrays = "<0.0.1, 1"
+Test = "<0.0.1, 1"
 julia = "1.9"
 
 [extras]
