add `[compat]` for `[weakdeps]`

--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ HierarchicalEOM_QuantumToolboxExt = "QuantumToolbox"
 
 [compat]
 Crayons = "4.1"
+CUDA = "5"
 DiffEqCallbacks = "2, 3"
 FastExpm = "1.1.0"
 JLD2 = "0.4.31"
@@ -39,6 +40,8 @@ OrdinaryDiffEq = "6.53.4"
 Pkg = "<0.0.1, 1"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
+QuantumOptics = "1"
+QuantumToolbox = "0"
 Reexport = "1"
 SciMLOperators = "0.3.5"
 SparseArrays = "<0.0.1, 1"
