--- a/.github/workflows/FormatCheck.yml
+++ b/.github/workflows/FormatCheck.yml
@@ -4,11 +4,17 @@ on:
   push:
     branches:
       - 'main'
-    tags: 
-      - '*'
+    paths:
+      - '.github/workflows/FormatCheck.yml'
+      - '.JuliaFormatter.toml'
+      - '**.jl'
   pull_request:
     branches:
       - 'main'
+    paths:
+      - '.github/workflows/FormatCheck.yml'
+      - '.JuliaFormatter.toml'
+      - '**.jl'
     types:
       - opened
       - reopened
