--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
 .DS_Store
 .vscode
 
+*.jl.*.cov
+*.jl.cov
+*.jl.mem
 Manifest.toml
 docs/build/
 docs/src/examples/
 
 *.txt
 *.jld2
+*.json
 
 *.py
+*.ipynb
 *.ipynb_checkpoints
 **/*.ipynb_checkpoints
 **/**/*.ipynb_checkpoints
