--- a/Project.toml
+++ b/Project.toml
@@ -30,11 +30,11 @@ HierarchicalEOM_QuantumToolboxExt = "QuantumToolbox"
 [compat]
 CUDA = "5"
 DiffEqCallbacks = "2, 3"
-FastExpm = "1.1.0"
-JLD2 = "0.4.31"
+FastExpm = "1.1"
+JLD2 = "0.4.31 - 0.4"
 LinearAlgebra = "<0.0.1, 1"
-LinearSolve = "2.4.2"
-OrdinaryDiffEq = "6.53.4"
+LinearSolve = "2.4.2 - 2"
+OrdinaryDiffEq = "6.53.4 - 6"
 Pkg = "<0.0.1, 1"
 PrecompileTools = "1"
 ProgressMeter = "1.7"
