--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -13,12 +13,12 @@ QuantumToolbox = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
 
 [compat]
 BenchmarkTools = "1.3"
-Documenter = "0.27, 1"
+Documenter = "1"
 HierarchicalEOM = "1"
 LaTeXStrings = "1"
-LinearSolve = "2.4"
+LinearSolve = "2"
 Literate = "2"
-OrdinaryDiffEq = "6.53"
+OrdinaryDiffEq = "6"
 Pardiso = "0.5"
 Plots = "1"
 QuantumOptics = "1"
