fix documentation CI

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -35,11 +35,15 @@ jobs:
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
-      - uses: julia-actions/cache@v1
-      - name: Install Julia Package dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
-      - name: Build and deploy documentation
+      - uses: julia-actions/cache@v2
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-docdeploy@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # If authenticating with SSH deploy key
-        run: julia --project=docs/ --color=yes docs/make.jl
+      - run: |
+          julia --project=docs -e '
+            using Documenter: DocMeta, doctest
+            using HierarchicalEOM
+            DocMeta.setdocmeta!(HierarchicalEOM, :DocTestSetup, :(using HierarchicalEOM); recursive=true)
+            doctest(HierarchicalEOM)'
