--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEq = "6.53.4 - 6"
 Pkg = "<0.0.1, 1"
 ProgressMeter = "1.7"
-QuantumToolbox = "0"
+QuantumToolbox = "~0"
 Reexport = "1"
 SciMLOperators = "0.3.5"
 SparseArrays = "<0.0.1, 1"
