--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -38,8 +38,8 @@ jobs:
       matrix:
         # for core tests (latest and oldest supported versions)
         julia-version:
-          - '1.9'  # oldest
-          - '1'    # latest
+          - '1.10'  # oldest
+        #  - '1'    # latest
         os:
           - ubuntu-latest
           - windows-latest
@@ -50,14 +50,14 @@ jobs:
 
         include:
           # for core tests on macOS
-          - julia-version: '1.9' # oldest
+          - julia-version: '1.10' # oldest
             os: 'macOS-latest'
             arch: 'arm64'
             group: 'Core'
-          - julia-version: '1'   # latest
-            os: 'macOS-latest'
-            arch: 'arm64'
-            group: 'Core'
+          # - julia-version: '1'    # latest
+          #   os: 'macOS-latest'
+          #   arch: 'arm64'
+          #   group: 'Core'
 
           # for core tests (intermediate versions)
           #- julia-version: '1.x'
