--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "HierarchicalEOM"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang <y.t.d.huang@phys.ncku.edu.tw>"]
-version = "2.0.0"
+version = "2.0.1"
 
 [deps]
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
@@ -9,11 +9,13 @@ FastExpm = "7868e603-8603-432e-a1a1-694bd70b01f2"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
-OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+OrdinaryDiffEqCore = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
+OrdinaryDiffEqLowOrderRK = "1344f307-1e59-4825-a18e-ace9aa3fa4c6"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 QuantumToolbox = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SciMLOperators = "c0aeaf25-5076-4817-a8d5-81caf7dfa961"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
@@ -30,15 +32,17 @@ FastExpm = "1.1"
 JLD2 = "0.4.31 - 0.4"
 LinearAlgebra = "<0.0.1, 1"
 LinearSolve = "2.4.2 - 2"
-OrdinaryDiffEq = "6.53.4 - 6"
+OrdinaryDiffEqCore = "1"
+OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "<0.0.1, 1"
 ProgressMeter = "1.7"
 QuantumToolbox = "0.12"
 Reexport = "1"
-SciMLOperators = "0.3.5"
+SciMLBase = "2"
+SciMLOperators = "0.3"
 SparseArrays = "<0.0.1, 1"
 Test = "<0.0.1, 1"
-julia = "1.9"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
