--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SciMLOperators = "c0aeaf25-5076-4817-a8d5-81caf7dfa961"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StaticArraysCore = "1e83bf80-4336-4d27-bf5d-d5a4f845583c"
 
 [weakdeps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -36,11 +37,12 @@ OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "<0.0.1, 1"
 ProgressMeter = "1.7"
-QuantumToolbox = "0.12"
+QuantumToolbox = "0.13"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
 SparseArrays = "<0.0.1, 1"
+StaticArraysCore = "1"
 Test = "<0.0.1, 1"
 julia = "1.10"
 
