--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ HierarchicalEOM_CUDAExt = "CUDA"
 CUDA = "5"
 DiffEqCallbacks = "2, 3"
 FastExpm = "1.1"
-JLD2 = "0.4.31 - 0.4"
+JLD2 = "0.4.31 - 0.4, 0.5"
 LinearAlgebra = "<0.0.1, 1"
 LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEqCore = "1"
