--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -9,3 +9,6 @@ OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuantumToolbox = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
+
+[compat]
+LaTeXStrings = "1"
