--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -21,7 +21,7 @@ jobs:
       - name: "Run CompatHelper"
         run: |
           import CompatHelper;
-          CompatHelper.main(;subdirs=["", "docs"])
+          CompatHelper.main(;subdirs=[""])
         shell: julia --color=yes {0}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
