--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -27,8 +27,8 @@ on:
 
 jobs:
   test:
-    name: Julia ${{ matrix.julia-version }} - ${{ matrix.os }} ${{ matrix.arch }} ( ${{ matrix.group }} )
-    runs-on: ${{ matrix.os }}
+    name: Julia ${{ matrix.julia-version }} - ${{ matrix.node.os }} ${{ matrix.node.arch }} ( ${{ matrix.group }} )
+    runs-on: ${{ matrix.node.os }}
     permissions: # needed to allow julia-actions/cache to delete old caches that it has created
       actions: write
       contents: read
@@ -40,43 +40,37 @@ jobs:
         julia-version:
           - '1.10'  # oldest
         #  - '1'    # latest
-        os:
-          - ubuntu-latest
-          - windows-latest
-        arch:
-          - x64
+        node:
+          - os: 'ubuntu-latest'
+            arch: 'x64'
+          - os: 'windows-latest'
+            arch: 'x64'
+          - os: 'macOS-latest'
+            arch: 'arm64'
         group:
-          - Core
+          - 'Core'
 
         include:
-          # for core tests on macOS
-          - julia-version: '1.10' # oldest
-            os: 'macOS-latest'
-            arch: 'arm64'
-            group: 'Core'
-          # - julia-version: '1'    # latest
-          #   os: 'macOS-latest'
-          #   arch: 'arm64'
-          #   group: 'Core'
-
-          # for core tests (intermediate versions)
-          #- julia-version: '1.x'
-          #  os: 'ubuntu-latest'
-          #  arch: 'x64'
-          #  group: 'Core'
-
           # for code quality tests
           - julia-version: '1'
-            os: 'ubuntu-latest'
-            arch: 'x64'
+            node: 
+              os: 'ubuntu-latest'
+              arch: 'x64'
             group: 'Code_Quality'
+
+          # for core tests (intermediate versions)
+          # - version: '1.x'
+          #   node:
+          #     os: 'ubuntu-latest'
+          #     arch: 'x64'
+          #   group: 'Core'
 
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.julia-version }}
-          arch: ${{ matrix.arch }}
+          arch: ${{ matrix.node.arch }}
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
