--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ HierarchicalEOM_CUDAExt = "CUDA"
 
 [compat]
 CUDA = "5"
-DiffEqCallbacks = "2, 3"
+DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
 JLD2 = "0.4.31 - 0.5"
 LinearAlgebra = "<0.0.1, 1"
@@ -35,7 +35,7 @@ LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "<0.0.1, 1"
-QuantumToolbox = "0.13 - 0.14"
+QuantumToolbox = "0.13 - 0.15"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
