--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "HierarchicalEOM"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang <y.t.d.huang@phys.ncku.edu.tw>"]
-version = "2.2.2"
+version = "2.2.3"
 
 [deps]
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
@@ -30,18 +30,18 @@ CUDA = "5"
 DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
 JLD2 = "0.4.31 - 0.5"
-LinearAlgebra = "<0.0.1, 1"
+LinearAlgebra = "1"
 LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
-Pkg = "<0.0.1, 1"
-QuantumToolbox = "0.13 - 0.16"
+Pkg = "1"
+QuantumToolbox = "0.13 - 0.17"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
-SparseArrays = "<0.0.1, 1"
+SparseArrays = "1"
 StaticArraysCore = "1"
-Test = "<0.0.1, 1"
+Test = "1"
 julia = "1.10"
 
 [extras]
