add julia v1.11 to CI config

--- a/.buildkite/CUDA_Ext.yml
+++ b/.buildkite/CUDA_Ext.yml
@@ -4,7 +4,7 @@ steps:
       setup:
         version:
           - "1.10" # oldest
-          #- "1"    # latest
+          - "1"    # latest
     plugins:
       - JuliaCI/julia#v1:
           version: "{{matrix.version}}"
