--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.15 - 0.19"
+QuantumToolbox = "0.15 - 0.19, 0.20"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
