--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,11 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 HierarchicalEOM_CUDAExt = "CUDA"
 
 [compat]
+Aqua = "0.8"
 CUDA = "5"
 DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
+JET = "0.9"
 JLD2 = "0.4.31 - 0.5"
 LinearAlgebra = "1"
 LinearSolve = "2.4.2 - 2"
@@ -45,7 +47,9 @@ Test = "1"
 julia = "1.10"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Aqua", "JET", "Test"]
