update compat with `QuantumToolbox`

--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.22"
+QuantumToolbox = "0.22 - 0.23"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
