--- a/.github/workflows/Code-Quality.yml
+++ b/.github/workflows/Code-Quality.yml
@@ -37,7 +37,7 @@ jobs:
       fail-fast: false
       matrix:
         julia-version:
-          - '1'
+          - 'lts'
         os:
           - 'ubuntu-latest'
         arch:
