change default linear solver to `KrylovJL_BICGSTAB`

--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,12 @@
 name = "HierarchicalEOM"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang"]
-version = "2.4.7"
+version = "2.5.0"
 
 [deps]
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 FastExpm = "7868e603-8603-432e-a1a1-694bd70b01f2"
+IncompleteLU = "40713840-3770-5561-ab4c-a76e7d0d7895"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
@@ -29,13 +30,14 @@ HierarchicalEOM_CUDAExt = "CUDA"
 CUDA = "5"
 DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
+IncompleteLU = "0.2"
 JLD2 = "0.4.31 - 0.5"
 LinearAlgebra = "1"
 LinearSolve = "2.4.2 - 3"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.28 - 0.29, 0.30"
+QuantumToolbox = "0.30"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
