CompatHelper: bump compat for SciMLOperators to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Pkg = "1"
 QuantumToolbox = "0.31"
 Reexport = "1"
 SciMLBase = "2"
-SciMLOperators = "0.3"
+SciMLOperators = "0.3, 0.4"
 SparseArrays = "1"
 StaticArraysCore = "1"
 Test = "1"
