CompatHelper: bump compat for JLD2 to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ CUDA = "5"
 DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
 IncompleteLU = "0.2"
-JLD2 = "0.4.31 - 0.5"
+JLD2 = "0.4.31 - 0.5, 0.6"
 LinearAlgebra = "1"
 LinearSolve = "2.4.2 - 3"
 OrdinaryDiffEqCore = "1"
