fix typo in runtest CI config

--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -52,7 +52,7 @@ jobs:
 
         include:
           # for core tests (intermediate versions)
-          - version: '1.11'
+          - julia-version: '1.11'
             node:
               os: 'ubuntu-latest'
               arch: 'x64'
