CompatHelper: bump compat for OrdinaryDiffEqCore to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ FillArrays = "1"
 IncompleteLU = "0.2"
 LinearAlgebra = "1"
 LinearSolve = "2.4.2 - 3"
-OrdinaryDiffEqCore = "1"
+OrdinaryDiffEqCore = "1, 2"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
 ProgressMeter = "1.11.0"
