CompatHelper: bump compat for QuantumToolbox to 0.40, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
 ProgressMeter = "1.11.0"
-QuantumToolbox = "0.39"
+QuantumToolbox = "0.39, 0.40"
 Reexport = "1"
 SciMLBase = "2.105"
 SciMLOperators = "1.11"
