[no ci] update QuantumToolbox version range in Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ OrdinaryDiffEqCore = "1, 2, 3"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
 ProgressMeter = "1.11.0"
-QuantumToolbox = "0.40 - 0.41, 0.42"
+QuantumToolbox = "0.40 - 0.42"
 Reexport = "1"
 SciMLBase = "2.105"
 SciMLOperators = "1.11"
